--- a/contact.html
+++ b/contact.html
@@ -168,7 +168,7 @@
             transform: scale(1.05);
             background: var(--maroon-text);
             color: #fff;
-            border-color: #ffd700;
+            border-color: #7A5D28;
         }
 
         /* Mobile Fixes */
