--- a/st.html
+++ b/st.html
@@ -330,7 +330,7 @@
         window.setFrame = (type) => {
             const cvs = document.createElement('canvas'); cvs.width=720; cvs.height=1280;
             const c = cvs.getContext('2d'); c.lineWidth = 40;
-            if(type=='gold') c.strokeStyle = '#FFD700';
+            if(type=='gold') c.strokeStyle = '#7A5D28';
             if(type=='red') c.strokeStyle = '#D32F2F';
             if(type=='flower') c.strokeStyle = '#E91E63';
             c.strokeRect(0,0,720,1280);
