--- a/testindex.html
+++ b/testindex.html
@@ -380,7 +380,7 @@
 
     <footer class="royal-footer">
         <div style="font-size: 0.9em; color: #ccc;">Developed & Designed By:</div>
-        <div style="color:#ffd700; font-size:1.2rem; font-family: var(--font-heading); margin: 5px 0;">Yuvraj Gajraj Singh</div>
+        <div style="color:#7A5D28; font-size:1.2rem; font-family: var(--font-heading); margin: 5px 0;">Yuvraj Gajraj Singh</div>
         
         <a href="https://www.facebook.com/gajsa.kasumbi" target="_blank" class="fb-link">
             <i class="fab fa-facebook"></i> Connect on Facebook
