--- a/hero.html
+++ b/hero.html
@@ -83,7 +83,7 @@
         /* 2. Double Box */
         .d2-box { background: #fff; padding: 30px 20px; border: 1px solid var(--gold); border-radius: 15px 15px 0 0; box-shadow: inset 0 0 0 5px #fff, inset 0 0 0 7px var(--gold), 0 10px 20px rgba(0,0,0,0.1); position:relative;}
         .d2-box::before { content: '⚜️'; position: absolute; top: -15px; left: 50%; transform: translateX(-50%); font-size: 1.5rem; color: var(--gold); background: #fff; }
-        .btn-2 { background: linear-gradient(to right, #b8860b, #ffd700); color: #fff; padding: 8px 20px; border-radius: 50px; border:none;}
+        .btn-2 { background: linear-gradient(to right, #b8860b, #7A5D28); color: #fff; padding: 8px 20px; border-radius: 50px; border:none;}
 
         /* 3. Kangura */
         .d3-fort { background: #fff; padding: 40px 20px 20px; border: 2px solid var(--gold); clip-path: polygon(0% 20px, 10% 0%, 20% 20px, 30% 0%, 40% 20px, 50% 0%, 60% 20px, 70% 0%, 80% 20px, 90% 0%, 100% 20px, 100% 100%, 0% 100%); }
@@ -136,9 +136,9 @@
         .btn-12 { background: #008080; color: #fff; border: none; padding: 8px 20px; border-radius: 20px 0 20px 0; }
 
         /* 13. Wood Door */
-        .d13-wood { background: linear-gradient(to right, #4e342e, #3e2723, #4e342e); color: #ffd700; padding: 30px 20px; border: 4px solid #8d6e63; border-radius: 10px 10px 0 0; position: relative; }
-        .d13-wood h3 { color: #ffd700; } .d13-wood p { color: #d7ccc8; }
-        .btn-13 { border: 1px solid #ffd700; color: #ffd700; background: transparent; padding: 5px 15px; }
+        .d13-wood { background: linear-gradient(to right, #4e342e, #3e2723, #4e342e); color: #7A5D28; padding: 30px 20px; border: 4px solid #8d6e63; border-radius: 10px 10px 0 0; position: relative; }
+        .d13-wood h3 { color: #7A5D28; } .d13-wood p { color: #d7ccc8; }
+        .btn-13 { border: 1px solid #7A5D28; color: #7A5D28; background: transparent; padding: 5px 15px; }
 
         /* 14. Marble */
         .d14-marble { background: #fff; padding: 30px 20px; border: 1px solid #ddd; background-image: radial-gradient(circle at 0 0, var(--gold) 5px, transparent 6px), radial-gradient(circle at 100% 0, var(--gold) 5px, transparent 6px); background-size: 100% 100%; }
@@ -156,7 +156,7 @@
 
         /* 17. Frame */
         .d17-frame { background: #fff; padding: 20px; border: 6px groove #b8860b; outline: 1px solid #5c4033; }
-        .btn-17 { background: #5c4033; color: #ffd700; border: none; padding: 8px 20px; }
+        .btn-17 { background: #5c4033; color: #7A5D28; border: none; padding: 8px 20px; }
 
         /* ============================================================
            NEW RAJPUTANA EXPERT DESIGNS (18-27)
@@ -206,18 +206,18 @@
         /* 21. ROYAL VELVET (Zari Work) */
         .d21-velvet {
             background: #660000; /* Deep Red Velvet */
-            color: #ffd700;
+            color: #7A5D28;
             padding: 25px;
-            border: 2px dashed #ffd700; /* Stitch effect */
+            border: 2px dashed #7A5D28; /* Stitch effect */
             outline: 5px solid #660000;
             box-shadow: 0 10px 30px rgba(0,0,0,0.5);
         }
-        .d21-velvet h3 { color: #ffd700; text-shadow: 1px 1px 2px #000; } .d21-velvet p { color: #ffeb3b; }
-        .btn-21 { background: #ffd700; color: #660000; border: none; padding: 8px 20px; font-weight: bold; }
+        .d21-velvet h3 { color: #7A5D28; text-shadow: 1px 1px 2px #000; } .d21-velvet p { color: #ffeb3b; }
+        .btn-21 { background: #7A5D28; color: #660000; border: none; padding: 8px 20px; font-weight: bold; }
 
         /* 22. ASHARFI (Gold Coin Octagon) */
         .d22-asharfi {
-            background: linear-gradient(135deg, #ffd700, #b8860b);
+            background: linear-gradient(135deg, #7A5D28, #b8860b);
             padding: 40px 20px;
             clip-path: polygon(30% 0%, 70% 0%, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0% 30%);
             color: #4b3621;
@@ -225,7 +225,7 @@
             width: 240px; height: 240px;
         }
         .d22-asharfi h3 { border-bottom: 2px solid #4b3621; } .d22-asharfi p { color: #3e2723; }
-        .btn-22 { background: #4b3621; color: #ffd700; border: none; padding: 5px 15px; }
+        .btn-22 { background: #4b3621; color: #7A5D28; border: none; padding: 5px 15px; }
 
         /* 23. TORAN (Entrance Decor) */
         .d23-toran {
