--- a/newgallery.html
+++ b/newgallery.html
@@ -28,7 +28,7 @@
            ========================================= */
         :root {
             --gold-main: #b8860b;
-            --gold-hover: #ffd700; 
+            --gold-hover: #7A5D28; 
             --maroon-text: #800000;
             --royal-blue: #030230;
             --cream-bg: #fffbf0;
@@ -267,7 +267,7 @@
     border: 2px solid #b8860b;
     border-radius: 5px;
 }
-.form-label { font-family: 'Cinzel', serif; color: #ffd700; font-size: 13px; }
+.form-label { font-family: 'Cinzel', serif; color: #7A5D28; font-size: 13px; }
     </style>
 </head>
 <body oncontextmenu="return false;">
@@ -401,7 +401,7 @@
     <footer class="royal-footer">
         <div class="container">
             <div style="font-size: 0.9em; color: #ccc;">Developed & Designed By:</div>
-            <div style="color:#ffd700; font-size:1.4rem; font-family: 'Cinzel', serif; margin: 5px 0;">Yuvraj Gajraj Singh</div>
+            <div style="color:#7A5D28; font-size:1.4rem; font-family: 'Cinzel', serif; margin: 5px 0;">Yuvraj Gajraj Singh</div>
             <a href="https://www.facebook.com/gajsa.kasumbi" target="_blank" class="fb-link" style="display:inline-block; margin:10px 0; color:#7A5D28;"><i class="fab fa-facebook"></i> Connect on Facebook</a>
             <div style="font-size: 0.8em; margin-top: 10px; color: #888;">&copy; 2026 | All Rights Reserved.</div>
         </div>
@@ -410,7 +410,7 @@
     <span class="modal-close" onclick="closeForm()" style="top: 20px; right: 20px; color: #fff;">&times;</span>
     <div class="modal-content-box" style="background: transparent; border: none; box-shadow: none;">
         <div class="modal-form-content">
-            <h3 style="font-family: 'Berkshire Swash'; color: #ffd700; text-align:center; margin-top:0;">Share Your Memory</h3>
+            <h3 style="font-family: 'Berkshire Swash'; color: #7A5D28; text-align:center; margin-top:0;">Share Your Memory</h3>
             
             <label class="form-label">आपका नाम</label>
             <input type="text" id="senderName" class="form-input" placeholder="Name">
