--- a/rathore.html
+++ b/rathore.html
@@ -29,8 +29,8 @@
             position: fixed;
             top: -10%; left: 50%;
             width: 5px; height: 5px;
-            background: #ffd700;
-            box-shadow: 0 0 10px #ffd700;
+            background: #7A5D28;
+            box-shadow: 0 0 10px #7A5D28;
             border-radius: 50%;
             animation: fall 10s linear infinite;
             z-index: 1; opacity: 0.7;
