--- a/slider test.html
+++ b/slider test.html
@@ -20,7 +20,7 @@
             padding: 8px 12px; cursor: pointer; text-transform: uppercase; font-size: 0.7rem; font-weight: bold;
             transition: 0.3s; border-radius: 20px;
         }
-        .btn:hover, .btn.active { background: #ffd700; color: #000; border-color: #ffd700; box-shadow: 0 0 10px #ffd700; }
+        .btn:hover, .btn.active { background: #7A5D28; color: #000; border-color: #7A5D28; box-shadow: 0 0 10px #7A5D28; }
 
         /* COMMON SETTINGS */
         .design-section { display: none; width: 100%; height: 100%; position: absolute; top: 0; left: 0; }
@@ -33,9 +33,9 @@
 
         /* 2. ROYAL FRAME */
         #d2-frame { background: url('https://www.transparenttextures.com/patterns/black-linen.png'), #111; display: flex; justify-content: center; align-items: center; }
-        .frame-border { width: 70%; height: 60%; border: 20px solid #2c1a0b; position: relative; box-shadow: 0 0 0 5px #ffd700, 0 0 50px rgba(0,0,0,0.8); }
+        .frame-border { width: 70%; height: 60%; border: 20px solid #2c1a0b; position: relative; box-shadow: 0 0 0 5px #7A5D28, 0 0 50px rgba(0,0,0,0.8); }
         .frame-border video { width: 100%; height: 100%; object-fit: cover; filter: sepia(0.3); }
-        .frame-plate { position: absolute; bottom: -50px; left: 50%; transform: translateX(-50%); background: linear-gradient(#ffd700, #b8860b); padding: 5px 30px; color: #000; font-weight: bold; border: 2px solid #fff; }
+        .frame-plate { position: absolute; bottom: -50px; left: 50%; transform: translateX(-50%); background: linear-gradient(#7A5D28, #b8860b); padding: 5px 30px; color: #000; font-weight: bold; border: 2px solid #fff; }
 
         /* 3. VINTAGE FARMAN */
         #d3-vintage { background: #f4e4bc url('https://www.transparenttextures.com/patterns/aged-paper.png'); color: #3e2723; text-align: center; }
@@ -50,14 +50,14 @@
         #d5-time { cursor: col-resize; }
         .layer-modern { position: absolute; width: 100%; height: 100%; background: #000; }
         .layer-modern video { width: 100%; height: 100%; object-fit: cover; }
-        .layer-old { position: absolute; top: 0; left: 0; width: 50%; height: 100%; overflow: hidden; border-right: 3px solid #ffd700; background: #fff; box-shadow: 5px 0 20px rgba(0,0,0,0.5); }
+        .layer-old { position: absolute; top: 0; left: 0; width: 50%; height: 100%; overflow: hidden; border-right: 3px solid #7A5D28; background: #fff; box-shadow: 5px 0 20px rgba(0,0,0,0.5); }
         .layer-old video { width: 100vw; height: 100vh; object-fit: cover; filter: grayscale(100%) sepia(80%) contrast(1.2); }
         
         /* 6. CINEMATIC */
         #d6-cine video { width: 100%; height: 100%; object-fit: cover; }
         .bar-top, .bar-bottom { position: absolute; left: 0; width: 100%; height: 12vh; background: #000; z-index: 10; display: flex; align-items: center; justify-content: center;}
         .bar-top { top: 0; } .bar-bottom { bottom: 0; }
-        .cine-title { color: #ffd700; letter-spacing: 5px; font-size: 0.9rem; text-transform: uppercase; }
+        .cine-title { color: #7A5D28; letter-spacing: 5px; font-size: 0.9rem; text-transform: uppercase; }
 
         /* =========================================
            7. ROYAL PARALLAX SCROLL (New)
@@ -90,7 +90,7 @@
             z-index: 10; position: relative;
         }
         
-        .p-title { font-size: 4rem; color: #ffd700; text-shadow: 0 0 20px #000; background: rgba(0,0,0,0.5); padding: 10px 40px; border: 2px solid #ffd700; }
+        .p-title { font-size: 4rem; color: #7A5D28; text-shadow: 0 0 20px #000; background: rgba(0,0,0,0.5); padding: 10px 40px; border: 2px solid #7A5D28; }
         .p-text-block { max-width: 800px; margin: 0 auto; line-height: 1.8; color: #ccc; font-size: 1.2rem; }
         .gold-divider { font-size: 2rem; color: #b8860b; margin: 20px 0; }
 
