--- a/newindex.html
+++ b/newindex.html
@@ -145,22 +145,67 @@
             </div>
 
             <div class="row">
-                <div class="col-xs-6 col-sm-3"><div class="profile-box"><div class="p-icon"><i class="fas fa-sun"></i></div><span class="p-label">कुल (Kul)</span><div class="p-value">राठौड़ (सूर्यवंशी)</div></div></div>
-                <div class="col-xs-6 col-sm-3"><div class="profile-box"><div class="p-icon"><i class="fas fa-seedling"></i></div><span class="p-label">उत्पत्ति (Origin)</span><div class="p-value">भगवान राम के पुत्र लव</div></div></div>
-                <div class="col-xs-6 col-sm-3"><div class="profile-box"><div class="p-icon"><i class="fas fa-id-card"></i></div><span class="p-label">गोत्र (Gotra)</span><div class="p-value">कश्यप / वशिष्ठ</div></div></div>
-                <div class="col-xs-6 col-sm-3"><div class="profile-box"><div class="p-icon"><i class="fas fa-book-reader"></i></div><span class="p-label">प्रवर (Pravar)</span><div class="p-value">कश्यप, वत्साह, नैध्रुव</div></div></div>
-                <div class="col-xs-6 col-sm-3"><div class="profile-box"><div class="p-icon"><i class="fas fa-flag"></i></div><span class="p-label">State (रियासत)</span><div class="p-value">जोधपुर (मारवाड़)</div></div></div>
-                <div class="col-xs-6 col-sm-3"><div class="profile-box"><div class="p-icon"><i class="fas fa-users"></i></div><span class="p-label">Clan (खांप)</span><div class="p-value">जोधा</div></div></div>
-                <div class="col-xs-6 col-sm-3"><div class="profile-box"><div class="p-icon"><i class="fas fa-code-branch"></i></div><span class="p-label">Subclan (नख)</span><div class="p-value">केसरीसिंहोत</div></div></div>
-                <div class="col-xs-6 col-sm-3"><div class="profile-box"><div class="p-icon"><i class="fas fa-calendar-check"></i></div><span class="p-label">Accession (परिग्रहण)</span><div class="p-value">1841 ईस्वी</div></div></div>
-                <div class="col-xs-6 col-sm-3"><div class="profile-box"><div class="p-icon"><i class="fas fa-hands-praying"></i></div><span class="p-label">कुलदेवी (Kuldevi)</span><div class="p-value">नागणेच्या माता जी</div></div></div>
-                <div class="col-xs-6 col-sm-3"><div class="profile-box"><div class="p-icon"><i class="fas fa-bullhorn"></i></div><span class="p-label">War Cry (रणघोष)</span><div class="p-value">रण बंका राठौड़</div></div></div>
-                <div class="col-xs-6 col-sm-3"><div class="profile-box"><div class="p-icon"><i class="fas fa-flag-checkered"></i></div><span class="p-label">Flag (निशान)</span><div class="p-value">पचरंगा (Panchranga)</div></div></div>
-                <div class="col-xs-6 col-sm-3"><div class="profile-box"><div class="p-icon"><i class="fas fa-dove"></i></div><span class="p-label">Bird (पक्षी)</span><div class="p-value">चील (Eagle/Kite)</div></div></div>
-                <div class="col-xs-6 col-sm-3"><div class="profile-box"><div class="p-icon"><i class="fas fa-book-open"></i></div><span class="p-label">वेद (Veda)</span><div class="p-value">शुक्ला यजुर्वेद</div></div></div>
-                <div class="col-xs-6 col-sm-3"><div class="profile-box"><div class="p-icon"><i class="fas fa-om"></i></div><span class="p-label">इष्ट देव (Isht Dev)</span><div class="p-value">श्री राम / विष्णु</div></div></div>
-                <div class="col-xs-6 col-sm-3"><div class="profile-box"><div class="p-icon"><i class="fas fa-map"></i></div><span class="p-label">Area (क्षेत्र)</span><div class="p-value">18,000 बीघा</div></div></div>
+                <div class="col-xs-12 col-sm-6 col-md-4"><div class="profile-box"><div class="p-icon"><i class="fas fa-sun"></i></div><span class="p-label">Dynasty (वंश)</span><div class="p-value">Rathore (Suryavanshi)</div></div></div>
+                <div class="col-xs-12 col-sm-6 col-md-4"><div class="profile-box"><div class="p-icon"><i class="fas fa-flag"></i></div><span class="p-label">State (रियासत)</span><div class="p-value">Jodhpur (Marwar)</div></div></div>
+                <div class="col-xs-6 col-md-4"><div class="profile-box"><div class="p-icon"><i class="fas fa-users"></i></div><span class="p-label">Clan (खांप)</span><div class="p-value">Jodha</div></div></div>
+                <div class="col-xs-6 col-md-4"><div class="profile-box"><div class="p-icon"><i class="fas fa-code-branch"></i></div><span class="p-label">Subclan (नख)</span><div class="p-value">Kesarisinghot</div></div></div>
+                <div class="col-xs-6 col-md-4"><div class="profile-box"><div class="p-icon"><i class="fas fa-calendar-check"></i></div><span class="p-label">Accession (पाटोत्सव)</span><div class="p-value">1827 AD</div></div></div>
+                <div class="col-xs-6 col-md-4"><div class="profile-box"><div class="p-icon"><i class="fas fa-map"></i></div><span class="p-label">Area (क्षेत्र)</span><div class="p-value">18,500 Bigha</div></div></div>
             </div>
+
+            <div class="row" style="margin-top: 60px;">
+                <div class="col-xs-12">
+                    <h2 class="text-center" style="border-bottom: 2px solid #b8860b; padding-bottom:10px; margin-bottom: 30px;">
+                        <span><i class="fas fa-landmark"></i> Royal Heritage & Roots</span>
+                        <div style="font-size: 14px; color: #800000; margin-top: 5px; font-family: 'Noto Serif Devanagari', serif;">(राजसी विरासत और मूल)</div>
+                    </h2>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-xs-12"><h4 style="color: #b8860b; font-family: 'Cinzel'; margin: 20px 0 15px; border-left: 4px solid #800000; padding-left: 10px;">I. Roots & Religion (आराध्य और मूल)</h4></div>
+                
+                <div class="col-xs-6 col-sm-3"><div class="profile-box small-box"><span class="p-label">Origin (निकास)</span><div class="p-value">Ayodhya</div></div></div>
+                <div class="col-xs-6 col-sm-3"><div class="profile-box small-box"><span class="p-label">Guru (गुरु)</span><div class="p-value">Vashishtha</div></div></div>
+                <div class="col-xs-6 col-sm-3"><div class="profile-box small-box"><span class="p-label">Kuldevi (कुलदेवी)</span><div class="p-value">Nagnecha Mata</div></div></div>
+                <div class="col-xs-6 col-sm-3"><div class="profile-box small-box"><span class="p-label">Place (धाम)</span><div class="p-value">Nagana (Badmer)</div></div></div>
+                <div class="col-xs-6 col-sm-3"><div class="profile-box small-box"><span class="p-label">River (नदी)</span><div class="p-value">Saryu</div></div></div>
+                <div class="col-xs-6 col-sm-3"><div class="profile-box small-box"><span class="p-label">Mountain (पहाड़)</span><div class="p-value">Gangey</div></div></div>
+                <div class="col-xs-6 col-sm-3"><div class="profile-box small-box"><span class="p-label">Tree (वृक्ष)</span><div class="p-value">Neem</div></div></div>
+                <div class="col-xs-6 col-sm-3"><div class="profile-box small-box"><span class="p-label">Bird (पक्षी)</span><div class="p-value">Chill (Eagle)</div></div></div>
+                <div class="col-xs-6 col-sm-3"><div class="profile-box small-box"><span class="p-label">Cow (गाय)</span><div class="p-value">Kapila</div></div></div>
+                <div class="col-xs-6 col-sm-3"><div class="profile-box small-box"><span class="p-label">Kunda (कुंड)</span><div class="p-value">Sun (Surya)</div></div></div>
+                <div class="col-xs-6 col-sm-3"><div class="profile-box small-box"><span class="p-label">Bheru (भैरू)</span><div class="p-value">Mandor, Kodamdesar</div></div></div>
+                <div class="col-xs-6 col-sm-3"><div class="profile-box small-box"><span class="p-label">East (इष्ट)</span><div class="p-value">Sitaram, Laxminarayan</div></div></div>
+            </div>
+
+            <div class="row">
+                <div class="col-xs-12"><h4 style="color: #b8860b; font-family: 'Cinzel'; margin: 30px 0 15px; border-left: 4px solid #800000; padding-left: 10px;">II. Royal Insignia & Arms (राजसी चिन्ह और आयुध)</h4></div>
+
+                <div class="col-xs-6 col-sm-3"><div class="profile-box small-box"><span class="p-label">Sword (तलवार)</span><div class="p-value">Ranthali</div></div></div>
+                <div class="col-xs-6 col-sm-3"><div class="profile-box small-box"><span class="p-label">Khanda (खांडा)</span><div class="p-value">Jagjit</div></div></div>
+                <div class="col-xs-6 col-sm-3"><div class="profile-box small-box"><span class="p-label">Horse (घोड़ा)</span><div class="p-value">Shyamkarna</div></div></div>
+                <div class="col-xs-6 col-sm-3"><div class="profile-box small-box"><span class="p-label">Throne (सिंहासन)</span><div class="p-value">Sandalwood (चंदन)</div></div></div>
+                <div class="col-xs-6 col-sm-3"><div class="profile-box small-box"><span class="p-label">Flag (निशान)</span><div class="p-value">Pacharanga</div></div></div>
+                <div class="col-xs-6 col-sm-3"><div class="profile-box small-box"><span class="p-label">Conch (शंख)</span><div class="p-value">Dakshinavarti</div></div></div>
+                <div class="col-xs-6 col-sm-3"><div class="profile-box small-box"><span class="p-label">Dhol (ढोल)</span><div class="p-value">Bhanwar</div></div></div>
+                <div class="col-xs-6 col-sm-3"><div class="profile-box small-box"><span class="p-label">Nagara (नगाड़ा)</span><div class="p-value">Ranjeet</div></div></div>
+                <div class="col-xs-12 col-sm-4"><div class="profile-box small-box"><span class="p-label">War Cry (रणघोष)</span><div class="p-value">Jai Mata Di / Ranbanka</div></div></div>
+            </div>
+
+            <div class="row">
+                <div class="col-xs-12"><h4 style="color: #b8860b; font-family: 'Cinzel'; margin: 30px 0 15px; border-left: 4px solid #800000; padding-left: 10px;">III. Court & Traditions (दरबार और परंपरा)</h4></div>
+
+                <div class="col-xs-6 col-sm-3"><div class="profile-box small-box"><span class="p-label">Title (उपाधि)</span><div class="p-value">Kamdhaj</div></div></div>
+                <div class="col-xs-6 col-sm-3"><div class="profile-box small-box"><span class="p-label">Priest (पुरोहित)</span><div class="p-value">Sewad</div></div></div>
+                <div class="col-xs-6 col-sm-3"><div class="profile-box small-box"><span class="p-label">Charan (चारण)</span><div class="p-value">Rohadia</div></div></div>
+                <div class="col-xs-6 col-sm-3"><div class="profile-box small-box"><span class="p-label">Bhat (भाट)</span><div class="p-value">Sigenlia</div></div></div>
+                <div class="col-xs-6 col-sm-3"><div class="profile-box small-box"><span class="p-label">Dholi (ढोली)</span><div class="p-value">Body</div></div></div>
+                <div class="col-xs-6 col-sm-3"><div class="profile-box small-box"><span class="p-label">Sikha (शिखा)</span><div class="p-value">Right (दाहिने)</div></div></div>
+                <div class="col-xs-6 col-sm-3"><div class="profile-box small-box"><span class="p-label">Bandhej (साफा)</span><div class="p-value">Wami (Left)</div></div></div>
+                <div class="col-xs-6 col-sm-3"><div class="profile-box small-box"><span class="p-label">Garland (माला)</span><div class="p-value">Ratan</div></div></div>
+            </div>
+
         </div>
     </section>
     <div class="parallax-gap gap-2"></div>
