--- a/newindex.html
+++ b/newindex.html
@@ -228,12 +228,12 @@
                 </div>
                 <div class="col-xs-4 col-sm-4" style="padding: 2px;">
                     <div style="cursor: pointer; overflow: hidden; border: 2px solid #d4af37; height: 100px;">
-                        <img src="event1.jpg" onclick="openLightbox(this)" style="width: 100%; height: 100%; object-fit: cover; transition: 0.5s;" alt="Events">
+                        <img src="view_from_fort.png" onclick="openLightbox(this)" style="width: 100%; height: 100%; object-fit: cover; transition: 0.5s;" alt="Events">
                     </div>
                 </div>
                 <div class="col-xs-4 col-sm-4" style="padding: 2px;">
                     <div style="cursor: pointer; overflow: hidden; border: 2px solid #d4af37; height: 100px;">
-                        <img src="mobile_gallery.jpg" onclick="openLightbox(this)" style="width: 100%; height: 100%; object-fit: cover; transition: 0.5s;" alt="Heritage">
+                        <img src="sunset_kasumbifort.jpg" onclick="openLightbox(this)" style="width: 100%; height: 100%; object-fit: cover; transition: 0.5s;" alt="Heritage">
                     </div>
                 </div>
             </div>
@@ -243,7 +243,7 @@
                     <div style="border: 1px solid #b8860b; background: #fff; padding: 5px; display: flex; align-items: center;">
                         <span style="background: #800000; color: #fff; padding: 2px 8px; font-size: 12px; font-weight: bold; margin-right: 10px; white-space: nowrap;">नवीन नाम:</span>
                         <marquee behavior="scroll" direction="left" scrollamount="4" style="color: #333; font-weight: bold; font-size: 13px;">
-                            ✦ भंवर सा. ✦ कुंवर सा. ✦ बाई सा. ✦ हुकम सिंह जी
+                            ✦ भंवर बन्ना सा खुशवेंद्र सिंह. ✦✦ भंवर बाई सा राघवी राठौड़. ✦
                         </marquee>
                     </div>
                 </div>
