--- a/newindex.html
+++ b/newindex.html
@@ -77,6 +77,7 @@
     </li>
 
     <li><a href="gallery.html">GALLERY</a></li>
+    <li><a href="royalalliances.html">ROYAL ALLIANCES</a></li>
     <li><a href="about.html">ABOUT</a></li>
     <li><a href="contact.html">CONTACT</a></li>
 </ul>
@@ -233,7 +234,7 @@
                 </div>
                 <div class="col-xs-4 col-sm-4" style="padding: 2px;">
                     <div style="cursor: pointer; overflow: hidden; border: 2px solid #d4af37; height: 100px;">
-                        <img src="sunset_kasumbifort.jpg" onclick="openLightbox(this)" style="width: 100%; height: 100%; object-fit: cover; transition: 0.5s;" alt="Heritage">
+                        <img src="sunset_kasumbifort.png" onclick="openLightbox(this)" style="width: 100%; height: 100%; object-fit: cover; transition: 0.5s;" alt="Heritage">
                     </div>
                 </div>
             </div>
@@ -299,7 +300,7 @@
         </p>
     </div>
 </div>
-                            </div>
+                        </div>
                             
                             <hr style="border-top: 1px dashed #b8860b; margin: 20px 0;">
 
@@ -354,7 +355,10 @@
     </a>
 </div>
 
-            <div style="font-size: 0.8em; margin-top: 20px; color: #888;">&copy; <span id="year">2026</span> | All Rights Reserved.</div>
+            <div style="font-size: 0.8em; margin-top: 20px; color: #888;">
+                &copy; <span id="year">2026</span> | All Rights Reserved.
+                <a href="admin.html" style="color: #666; margin-left: 10px;"><i class="fas fa-lock"></i></a>
+            </div>
             <div style="margin-top: 10px; font-size: 0.9rem; color: #d4af37;">🏰 Total Royal Guests: <span id="visitor-count" style="color:#fff; font-weight:bold;">12,543</span></div>
         </div>
     </footer>
