--- a/newcontact.html
+++ b/newcontact.html
@@ -72,7 +72,7 @@
 
     <div class="container" style="margin-top: 50px; margin-bottom: 50px;">
         
-        <div class="row">
+        <div class="row-flex">
             <div class="col-md-6">
                 <div class="contact-box">
                     <h3 class="contact-title"><i class="fas fa-landmark"></i> ठिकाना पता</h3>
@@ -80,9 +80,9 @@
                     <div class="info-item">
                         <i class="fas fa-map-marker-alt info-icon"></i>
                         <div class="info-text">
-                            <strong>Thikana Kasumbi (Jakhlan)</strong><br>
+                            <strong>Fort Kasumbi (Jakhlan)</strong><br>
                             Tehsil Ladnun, District Didwana-Kuchaman,<br>
-                            Rajasthan, India (341306)
+                            Rajasthan, India (341304)
                         </div>
                     </div>
 
